feat(signal-forms) - prototype for simple text/number control

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "app",
+            "prefix": ["app", "sig"],
             "style": "camelCase"
           }
         ],
