--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": ["app", "sig"],
+            "prefix": ["app", "sf"],
             "style": "camelCase"
           }
         ],
