--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,14 @@
             "prefix": "app",
             "style": "kebab-case"
           }
+        ],
+        "@typescript-eslint/no-unused-vars": [
+          "error",
+          {
+            "args": "none",
+            "argsIgnorePattern": "^_",
+            "varsIgnorePattern": "^_"
+          }
         ]
       }
     },
